// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test TimeSample > view state > render initial state > snapshot initial 1`] = `ReactWrapper {}`;

exports[`Test TimeSample > view state > render some state > snapshot state1 1`] = `ReactWrapper {}`;

exports[`Test TimeSample > view state > render some state > snapshot state2 1`] = `ReactWrapper {}`;

exports[`Test TimeSample view state render initial state snapshot initial 1`] = `
Array [
  <div>
    Current time : 
    -1
     
    <button
      onClick={[Function]}
    >
      Get current time
    </button>
  </div>,
  <div>
    In :
    false
     
    <button
      disabled={false}
      onClick={[Function]}
    >
      Trigger in
    </button>
  </div>,
  <div>
    Ticks1 : 
    0
    , ticks2 : 
    0
     
    <button
      onClick={[Function]}
    >
      start ticking
    </button>
  </div>,
]
`;

exports[`Test TimeSample view state render some state snapshot state1 1`] = `
Array [
  <div>
    Current time : 
    1313
     
    <button
      onClick={[Function]}
    >
      Get current time
    </button>
  </div>,
  <div>
    In :
    true
     
    <button
      disabled={false}
      onClick={[Function]}
    >
      Trigger in
    </button>
  </div>,
  <div>
    Ticks1 : 
    13
    , ticks2 : 
    131313
     
    <button
      onClick={[Function]}
    >
      stop ticking
    </button>
  </div>,
]
`;

exports[`Test TimeSample view state render some state snapshot state2 1`] = `
Array [
  <div>
    Current time : 
    1313
     
    <button
      onClick={[Function]}
    >
      Get current time
    </button>
  </div>,
  <div>
    In :
    ...
     
    <button
      disabled={true}
      onClick={[Function]}
    >
      Trigger in
    </button>
  </div>,
  <div>
    Ticks1 : 
    13
    , ticks2 : 
    131313
     
    <button
      onClick={[Function]}
    >
      stop ticking
    </button>
  </div>,
]
`;
